// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Indicator > should match its default snapshot 1`] = `
<div
  class="inline-block"
  data-id="sds-indicator"
>
  <div
    class="relative"
  >
    
    Indicator
    
    <div
      class="absolute border-white rounded-full bg-blue-500 dark:bg-blue-400 h-4 w-4 border-2 -top-1.5 -right-1.5"
      role="status"
    >
      <!---->
    </div>
  </div>
</div>
`;

exports[`Indicator > should match its variant green, placement bottom-right snapshot 1`] = `
<div
  class="inline-block"
  data-id="sds-indicator"
>
  <div
    class="relative"
  >
    
    Indicator
    
    <div
      class="absolute border-white rounded-full bg-green-500 dark:bg-green-400 h-4 w-4 border-2 -bottom-1.5 -right-1.5"
      role="status"
    >
      <!---->
    </div>
  </div>
</div>
`;
